# firstpluginprogram

./: .gitlab-ci.yml  CMakeLists.txt  README.md  config.json.in
config/: config.json.in
plugins/: CMakeLists.txt
plugins/pluginA/: CMakeLists.txt  pluginA.cpp
plugins/pluginB/: CMakeLists.txt  pluginB.cpp
plugins/plugin_a/: CMakeLists.txt  plugin_a.cpp
plugins/plugin_b/: CMakeLists.txt  plugin_b.cpp
plugins/plugin_c/: CMakeLists.txt  plugin_c.cpp
src/: CMakeLists.txt  main.cpp
